<resources>
    <string name="app_name">UniRoadMap</string>
    <string name="home_bottomnav_1">Map</string>
    <string name="home_botomnnav_2">Around</string>
    <string name="home_bottomnav_3">Saved</string>
    <string name="home_bottomnav_4">Devices</string>
    <string name="home_bottomnav_5">Account</string>

    <string name="home_map_search_text">Search here…</string>

    <string name="mapbox_map_token">pk.eyJ1IjoiZ2dvcmFhIiwiYSI6ImNrNnpscHFvZDBhZ2gzcm1sbXVpb3B1YWwifQ.RErV2Z9rGAlr21GyAsx-nA</string>
    <string name="bottom_sheet_home_text">Home</string>
    <string name="bottom_sheet_work_text">Work</string>
    <string name="bottom_sheet_start_navigation_text">Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
