<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomnav_map"
        android:icon="@drawable/ic_pin"
        android:title="@string/home_bottomnav_1" />
    <item
        android:id="@+id/bottomnav_around"
        android:icon="@drawable/ic_data"
        android:title="@string/home_botomnnav_2" />
    <item
        android:id="@+id/bottomnav_saved"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/home_bottomnav_3" />
    <item
        android:id="@+id/bottomnav_devices"
        android:icon="@drawable/ic_laptop"
        android:title="@string/home_bottomnav_4" />
    <item
        android:id="@+id/bottomnav_account"
        android:icon="@drawable/ic_boy"
        android:title="@string/home_bottomnav_5" />

</menu>